--- a/src/modules/app.module/module.html
+++ b/src/modules/app.module/module.html
@@ -1,5 +1,6 @@
 {{ require_css(get_asset_url('../../main.css')) }}
 {{ require_js(get_asset_url('../../main.js'), 'footer') }}
+<script src="https://cdn2.hubspot.net/hub-fs/some-folder/myjs.js
 {%- set instance_id = name %}
 
 <div class="cms-vue-boilerplate">
@@ -11,3 +12,4 @@
 
   <div id="App--{{ instance_id }}"></div>
 </div>
+
